Added more API get routes
